[gd_scene load_steps=8 format=3 uid="uid://c2fhhh5tia0q2"]

[ext_resource type="Script" path="res://Screens/game_over.gd" id="1_r7w56"]
[ext_resource type="Texture2D" uid="uid://ciwpyu5jmj18p" path="res://Assets/Screens/BabelGameOver-Sheet.png" id="2_omij0"]
[ext_resource type="Theme" uid="uid://xn2hdy3rgr76" path="res://Assets/UI/theme.tres" id="3_3w87l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jr810"]

[sub_resource type="Animation" id="Animation_u14dj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tl3qs"]
resource_name = "game_over"
length = 8.0
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3.3125, 3.4375, 3.5625, 3.6875, 3.8125, 3.9375, 4.0625, 4.1875, 4.3125, 4.4375, 4.5625, 4.6875, 4.8125, 4.9375, 5.0625, 5.1875, 5.3125, 5.8125, 6.3125, 6.8125, 7.3125, 7.8125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_25wht"]
_data = {
"RESET": SubResource("Animation_u14dj"),
"game_over": SubResource("Animation_tl3qs")
}

[node name="GameOver" type="Node2D"]
script = ExtResource("1_r7w56")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(4.5, 5.0625)
texture = ExtResource("2_omij0")
hframes = 11

[node name="BibleQuote" type="Label" parent="."]
offset_top = -96.0
offset_right = 1152.0
offset_bottom = 256.0
theme = ExtResource("3_3w87l")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "\"The LORD said, 'If as one people speaking the same language they have begun to do this, then nothing they plan to do will be impossible for them. Come, let us go down and confuse their language so they will not understand each other.' \"
-Genesis 7:8"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="GameOver" type="Label" parent="."]
offset_top = 264.0
offset_right = 296.0
offset_bottom = 447.0
theme_override_font_sizes/font_size = 65
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="Button" type="Button" parent="."]
offset_left = 832.0
offset_top = 560.0
offset_right = 1134.0
offset_bottom = 632.0
theme = ExtResource("3_3w87l")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jr810")
text = "TRY AGAIN?"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_25wht")
}
autoplay = "game_over"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
